# cppws

./: .gitignore  Build.md  CMakeLists.txt  DOCS.md  PR.md  ReadMe.Md  TESTS.md  bb.txt  finding.Md  package-lock.json  package.json  tsconfig.json
prebuilds/linux-x64-gnu/: package.json
scripts/: postinstall.js  prebuild.js
src/cpp/: binding.cpp  websocket_core.cpp  websocket_core.h
src/js/: event-emitter.ts  index.ts  native-loader.ts  plugin.ts  room-manager.ts  ws-context.ts
src/js/middleware/: auth.ts  compression.ts  rate-limit.ts
src/js/utils/: events.ts  metrics.ts
src/types/: index.d.ts  index.ts
tests/: Fastify.example .js  Hono.example.JS
tests/integration/: Roomtest.js  bench.js  elysiajscppws.integration.ts  testmain.ts
tests/unit/: event-emitter.test.ts  rate-limiter.test.ts  room-manager.test.ts
